# mowaki

./: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: tests.yml
app/: README.md  __main__.py  app.py  cli.py  config.py  dev.py  exceptions.py  resources.py  schema.py
app/api/: __init__.py  auth.py  base.py  example.py  fields.py  form_config.py  info.py  mut_user.py  query_user.py  user.py
app/cli/: __init__.py  base.py  system.py  user.py
app/core/: auth.py  base.py  context.py  example.py  exceptions.py  signup.py  user.py  users.py
app/db/: __init__.py
app/io/: email.py  resources.py
app/lib/: README.md  auth.py  config.py  database.py  dates.py  email_composer.py  graphql.py  graphql_app.py  graphql_view.py  normalize.py  queue.py  subscriptions.py
app/models/: auth_info.py  user.py
app/repo/: users.py
app/schema/: __init__.py  auth.py  clock.py  notes.py
app/utils/: normalize.py  testing.py
app/webapi/: auth.py  context.py  server.py  webapp.py
docs/: architecture.rst  conf.py  development.rst  index.rst  quickstart.rst  requirements.txt
migrations/: env.py
mowaki/: context.py  database.py  email_composer.py  jwt.py
mowaki/lib/: config.py  context.py  crypto.py
mowaki_tests/: README.md  test_config.py
tests/: conftest.py
tests/api/: conftest.py  test_api_authentication.py  test_api_info.py
tests/core/: test_user_core.py
tests/fixtures/: config.py  database.py  resources.py
tests/selftest/: README.md  (+1 more)
tpl/: README.md
web/: .dir-locals.el  .neutrinorc.js  package-lock.json  package.json
web/src/: App.js  (+2 more)
(+66 files in other folders)
