[tool.poetry]
name = "mowaki-app"
version = "0.6.0"
description = "MOdern Web Application KIt"
authors = ["Samuele Santi <samuele@samuelesanti.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
psycopg2 = "^2.8.6"
SQLAlchemy = "^1.3.23"
alembic = "^1.5.6"
bcrypt = "^3.2.0"
nicelog = "^0.3"
PyJWT = "^2.0.1"
pytz = "^2021.1"
redis = "^3.5.3"
PyQL = "^3"
mowaki = "^0.3"
tabulate = "^0.8.9"
uvicorn = "^0.13.4"
graphql-server = {version = "^3.0.0b3", allow-prereleases = true}

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
